# docs/bk_kms.openapi.json
@@ -321,16 +321,8 @@
               "example": {
                 "author": "作者： 阮一峰",
                 "create_archive": false,
-                "create_ebook": false,
-                "createdAt": "2025-10-04 15:19:34",
                 "excerpt": "智谱和 Anthropic 都发了最强编程模型 - 阮一峰的网络日志2",
-                "hasArchive": true,
-                "hasContent": true,
-                "hasEbook": false,
                 "id": 1,
-                "imageURL": "",
-                "modifiedAt": "2025-10-04 15:26:17",
-                "public": 0,
                 "tags": [
                   {
                     "name": "blog"
@@ -947,7 +939,7 @@
       }
     },
     "/api/v1/auth/login": {
-      "get": {
+      "post": {
         "summary": "用户登录",
         "deprecated": false,
         "description": "",
@@ -966,13 +958,19 @@
                     "type": "string"
                   },
                   "captcha": {
-                    "type": "string"
+                    "type": "string",
+                    "description": "验证码内容"
+                  },
+                  "captcha_id": {
+                    "type": "string",
+                    "description": "验证码id"
                   }
                 },
                 "required": [
                   "username",
                   "pwd",
-                  "captcha"
+                  "captcha",
+                  "captcha_id"
                 ],
                 "description": "用户名"
               },
@@ -1064,10 +1062,20 @@
                         "captcha": {
                           "type": "string",
                           "description": "图形验证码，base64编码"
+                        },
+                        "captcha_id": {
+                          "type": "string",
+                          "description": "图形验证码id"
+                        },
+                        "captcha_str": {
+                          "type": "string",
+                          "description": "图形验证码值"
                         }
                       },
                       "required": [
-                        "captcha"
+                        "captcha",
+                        "captcha_id",
+                        "captcha_str"
                       ]
                     }
                   },
@@ -1099,7 +1107,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080",
+      "url": "http://localhost:8081",
       "description": "开发环境"
     }
   ],
